[package]
name = "wavelet_noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minirng = "0.1.0"
minvect = "0.1.3"

[dev-dependencies]
minimg = "0.1.2"
glow_mesh = "0.1.2"
glutin = "0.28"
glow = "0.11.0"
